src_old/objects/ProjectServiceMaterial__c.object
<CustomObject>
    <description>Relates Material to a Project Service. Material is added manually when building a Project. Project Service Material is related to Project Service and Material.</description>
    <fields>
        <fullName>CostPerUnit__c</fullName>
        <formula>Material__r.EstimatedCostPerUnit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomDescription__c</fullName>
        <label>Custom Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceType__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Additional Cost</fullName>
                </value>
                <value>
                    <fullName>Partner 1</fullName>
                </value>
                <value>
                    <fullName>Partner 2</fullName>
                </value>
                <value>
                    <fullName>Partner 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kit__c</fullName>
        <formula>Material__r.Kit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Kit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaterialDescription__c</fullName>
        <label>Material Description</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MaterialExternalId__c</fullName>
        <formula>Material__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialName__c</fullName>
        <formula>Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Material__c.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Project Service Material</relationshipLabel>
        <relationshipName>ProjectServiceMaterial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Service Materials</relationshipLabel>
        <relationshipName>ProjectServiceMaterials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <label>ShipTo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep</fullName>
                    <default>true</default>
                    <label>Rep</label>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>CostPerUnit__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UseType__c</fullName>
        <label>UseType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Location</fullName>
                    <default>true</default>
                    <label>By Location</label>
                </value>
                <value>
                    <fullName>By Rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project Service Material</label>
    <nameField>
        <displayFormat>PSM-{00000000}</displayFormat>
        <label>Project Service Material Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Material</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Disallow_materials_for_MultiDay_Projects</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW() ,ProjectService__r.Project__r.ProjectType__r.AllowMultidays__c == True)</errorConditionFormula>
        <errorMessage>Materials cannot be added to a multi day project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Material</fullName>
        <active>true</active>
        <errorConditionFormula>Material__c = null || Material__c = &apos;&apos;</errorConditionFormula>
        <errorMessage>Invalid Material. Please select a valid material.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_Quantity</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISNULL(Quantity__c),
Quantity__c&lt;=0 || Quantity__c&gt;99999)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Please enter a valid quantity between 1 and 99999</errorMessage>
    </validationRules>
</CustomObject>